# chaotic-dynamical-systems

./: .Rbuildignore  .gitignore  .lintr  .styler.R  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  FUNCTION_DOCUMENTATION_GUIDE.md  INSTALL.md  MEMORY_MANAGEMENT_GUIDE.md  MODERNIZATION_EXAMPLES.R  MODERNIZATION_GUIDE.md  NAMESPACE  NEWS.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_SUMMARY.md  QUICK_START_MODERNIZATION.md  README.md  SCATHING_CRITIQUE.md  UX_IMPROVEMENTS_SUMMARY.md  VALIDATION_REPORT.md  _pkgdown.yml  check_output.txt  document.R  gen_docs.R  install_deps.R  performance_analysis.R  pyproject.toml  repository-schema.md  roadmap.md  run-demo-chaos.R  setup-all.sh  setup.sh  simple_doc.R  test_package_functionality.R  test_results.txt  validate_enhancements.R
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
R/: RcppExports.R  advanced-diagnostics.R  advanced-extremes.R  bayesian-extremes.R  block-maxima.R  bootstrap-ci.R  cluster-statistics.R  data.R  extremal-index.R  fast-functions.R  fractal-dimension.R  interactive-plots.R  launch-explorer.R  lyapunov.R  mixing-diagnostics.R  mppexcesses.R  multidim-extremes.R  multivariate-extremes.R  optimized-wrappers.R  parallel-utils.R  peaks-over-threshold.R  recurrence-analysis.R  run-demo-chaos.R  simulate.R  threshold-selection.R  utils.R  zzz.R
analysis/: block-maxima.R  bootstrap-ci.R  cluster-statistics.R  mixing-diagnostics.R  peaks-over-threshold.R  recurrence-plots.R  threshold-selection.R
benchmarks/: extremal_index_benchmarks.R  multivariate_extremal_index_benchmarks.R  (+1 more)
(+186 files in other folders)
